--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "asyncpg>=0.31.0",
     "fastapi>=0.124.4",
+    "google-genai>=1.0.0",
     "httpx>=0.28.1",
     "minio>=7.2.20",
     "openai>=1.0.0",
