fix: Fixed a issue with dependency

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,21 @@
 # Database Configuration
 DATABASE_URL=postgresql+asyncpg://toefl:toefl123@localhost:5432/toefl_speaking
 
-# MinIO (S3-compatible Object Storage)
+# MinIO Object Storage
 MINIO_ENDPOINT=localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_SECURE=false
 
-# OpenAI API (Required for AI features)
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+# AI Service Configuration
+# Required: OpenAI API Key for Whisper speech-to-text transcription
+OPENAI_API_KEY=your-openai-api-key-here
 
-# Volcengine API (Optional - legacy support)
-VOLCENGINE_API_KEY=
-VOLCENGINE_APP_ID=
+# Optional but recommended: Gemini API Key for audio analysis (faster and cheaper)
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# AI Provider Selection: auto (recommended) | gemini | openai
+# - auto: Uses Gemini if available, falls back to OpenAI
+# - gemini: Forces Gemini 2.5 Pro usage
+# - openai: Forces OpenAI GPT-4o usage
+AUDIO_AI_PROVIDER=auto
