--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,31 @@
-# Database Configuration
-DATABASE_URL=postgresql+asyncpg://toefl:toefl123@localhost:5432/toefl_speaking
+# Supabase Configuration
+# Run `supabase start` and copy values from `supabase status`
 
-# MinIO Object Storage
-MINIO_ENDPOINT=localhost:9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin123
-MINIO_SECURE=false
+# Database (from supabase status -> Database -> URL)
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@127.0.0.1:54322/postgres
 
-# AI Service Configuration
-# Required: OpenAI API Key for Whisper speech-to-text transcription
-OPENAI_API_KEY=your-openai-api-key-here
+# Supabase API URL (from supabase status -> APIs -> Project URL)
+SUPABASE_URL=http://127.0.0.1:54321
 
-# Optional but recommended: Gemini API Key for audio analysis (faster and cheaper)
-GEMINI_API_KEY=your-gemini-api-key-here
+# Storage S3 API (from supabase status -> Storage (S3))
+STORAGE_ENDPOINT=http://127.0.0.1:54321/storage/v1/s3
+STORAGE_ACCESS_KEY=your-access-key-from-supabase-status
+STORAGE_SECRET_KEY=your-secret-key-from-supabase-status
+STORAGE_REGION=local
 
-# AI Provider Selection: auto (recommended) | gemini | openai
-# - auto: Uses Gemini if available, falls back to OpenAI
-# - gemini: Forces Gemini 2.5 Pro usage
-# - openai: Forces OpenAI GPT-4o usage
+# Storage Buckets
+STORAGE_BUCKET_QUESTIONS=toefl-questions
+STORAGE_BUCKET_RECORDINGS=toefl-recordings
+
+# AI Services
+OPENAI_API_KEY=your-openai-key
+GEMINI_API_KEY=your-gemini-key
 AUDIO_AI_PROVIDER=auto
+
+# Volcengine (optional)
+VOLCENGINE_API_KEY=
+VOLCENGINE_ACCESS_KEY=
+VOLCENGINE_SECRET_KEY=
+
+# CORS
+CORS_ORIGINS=["http://localhost:5173", "http://localhost:5174"]
