--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "fastapi>=0.124.4",
     "google-genai>=1.0.0",
     "httpx>=0.28.1",
-    "minio>=7.2.20",
     "openai>=1.0.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
@@ -17,6 +16,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "python-ulid>=3.1.0",
     "sqlalchemy[asyncio]>=2.0.45",
+    "boto3>=1.35.0",
     "uvicorn[standard]>=0.38.0",
 ]
 
